fix view height on mobile views

--- a/styles/art.css
+++ b/styles/art.css
@@ -138,6 +138,9 @@
 }
 
 @media (max-width: 700px){
+  .fullheight {
+      height: calc(var(--vh, 1vh) * 100);
+    }
   .container{
     flex-direction: column;
   }
@@ -146,19 +149,19 @@
   }
   .columnOne{
     width:100vw;
-    margin-top:10vh;
-    max-height:70vh;
+    margin-top: calc(var(--vh, 1vh) * 10);
+    max-height: calc(var(--vh, 1vh) * 70);
   }
   .columnTwo{
     width:100vw;
-    height:20vh;
+    height: calc(var(--vh, 1vh) * 20);
   }
   .imgContainer{
-    max-height:70vh;
+    max-height:calc(var(--vh, 1vh) * 70);
     width:100%;
   }
   .mySlides img{
-    max-height:65vh;
+    max-height:calc(var(--vh, 1vh) * 65);
     margin-bottom:10%;
     max-width:100vw;
   }
