--- a/styles/music.css
+++ b/styles/music.css
@@ -41,7 +41,9 @@
     align-items: center;
     justify-content:center;
 }
-
+iframe{
+    height:500px;
+}
 .imgContainer{
     display:flex;
     flex-direction: column;
@@ -69,29 +71,29 @@
 }
 
 @media (max-width: 1000px) { 
-.container{
-    flex-direction:column;
-}
-.columnOne{
-    width:100%;
-}
-.columnTwo{
-    width:100%;
-    height:600px;
-}
-.speakerImg{
-    display:none;
-}
-.musicSelection{
-    margin-top:10px;
-    height:80px;
-}
-.columnOne{
-    justify-content: start;
-}
-.rowOne{
-    margin-bottom:10px;
-}
+    .container{
+        flex-direction:column;
+    }
+    .columnOne{
+        width:100%;
+    }
+    .columnTwo{
+        width:100%;
+        height:600px;
+    }
+    .speakerImg{
+        display:none;
+    }
+    .musicSelection{
+        margin-top:10px;
+        height:80px;
+    }
+    .columnOne{
+        justify-content: start;
+    }
+    .rowOne{
+        margin-bottom:10px;
+    }
 }
 
 @media (max-width: 700px) { 
@@ -112,10 +114,13 @@
         border-bottom: none;
         position:absolute;
     }
-      .navigation a:not(:first-child){
+    iframe{
+        height:300px;
+    }
+    .navigation a:not(:first-child){
         display:none;
-      }
-      .navigation.responsive {
+    }
+    .navigation.responsive {
         position: absolute;
         transition: 0.3s ease;
         background-color: white;
@@ -123,11 +128,11 @@
         height:30%;
         align-items: center;
         z-index: 1;
-      }
-      .navigation.responsive a.navIcon {
+    }
+    .navigation.responsive a.navIcon {
         top: 0;
-      }
-      .navigation.responsive a {
+    }
+    .navigation.responsive a {
         display: block;
-      }
+    }
 }
